# hermes-s2s

./: .gitignore  CHANGELOG.md  README.md  plugin.yaml  pyproject.toml
docs/: BACKLOG-0.3.1.md  BACKLOG-0.3.2.md  BACKLOG.md  HOWTO-REALTIME-DISCORD.md  HOWTO-S2S-CONFIGURE.md  HOWTO-VOICE-MODE.md  INSTALL.md  ROADMAP.md
docs/adrs/: 0004-command-provider-interception.md  0005-audio-resampling.md  0006-discord-voice-bridge.md  0007-audio-bridge-frame-callback.md  0008-tool-call-bridging.md  0009-plug-and-play-ux.md  0010-provider-subblock-unwrap.md  0011-plugin-owned-s2s-command.md  0012-voice-thread-comanagement.md  0013-four-mode-voicesession.md  0014-voice-meta-and-tool-export.md  0015-s2s-configure-rich-ui.md
docs/design-history/: VISION-from-aria-fork.md
docs/plans/: wave-0.2.0-command-shims.md  wave-0.3.0-realtime-discord.md  wave-0.3.1-audio-bridge.md  wave-0.3.2-plug-and-play.md  wave-0.4.0-rearchitecture.md  wave-0.4.2-clicks-history-quickwins.md  wave-0.4.2-manual-vad.md  wave-0.5.0-s2s-configure.md
docs/research/: 10-arabic-language-rootcause.md  11-thread-voice-context.md  12-voice-mode-rearchitecture.md  13-mode-ux-deep-dive.md  14-thread-comanagement-deep-dive.md  15-modes-and-meta-deep-dive.md  16-delegation-routing-diagnostic.md  17-audio-clicks-rootcause.md  18-realtime-history-injection.md  (+3 more)
examples/: config.example.yaml
hermes_s2s/: __init__.py  cli.py  doctor.py  migrate_0_4.py  registry.py  schemas.py  tools.py
scripts/: smoke_discord.md  smoke_realtime.py
tests/: conftest.py  test_audio_bridge.py  test_audio_bridge_vad.py  test_audio_resample.py  test_bridge_integration.py  test_cli_shims.py  test_config_loader.py  test_config_unwrap.py  test_configure_view.py  test_connect_options_and_config.py  test_discord_bridge.py  test_doctor.py  test_gemini_live.py  test_meta.py  test_migrate.py  test_openai_realtime.py  test_realtime_history_injection.py  test_s2s_server_provider.py  test_s3_s4_quickwins.py  test_setup_wizard.py  test_silence_fade_and_resampler_reset.py  test_slash_command.py  test_slash_telegram.py  test_smoke.py  test_streaming_resample.py  test_threads.py  test_tool_bridge.py  test_tool_export.py  test_v045_agentic_readiness.py  test_v046_provider_aliases_history_fix.py  test_voice_modes.py
(+76 files in other folders)
